# workout_api

./: README.md  populate_db.py  pyproject.toml  run.ps1
alembic/: env.py
alembic/versions/: 1e01cf894537_initial_migration.py
workout_api/: __init__.py  main.py  services.py
workout_api/atleta/: controller.py  schemas.py
workout_api/categorias/: controller.py  schemas.py
workout_api/centro_treinamento/: controller.py
