[project]
name = "workout-api"
version = "0.1.0"
description = ""
authors = [
    {name = "silva-gg"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "make (>=0.1.6.post2,<0.2.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi-pagination (>=0.15.4,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
